--- a/test/fixtures/samples.yml
+++ b/test/fixtures/samples.yml
@@ -1,27 +1,29 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  institution: MyString
-  doctor_full_name: MyString
-  doctor_email: MyString
+  id: 1
+  institution: Clínica San Cristobal
+  doctor_full_name: Dr. Jaime
+  doctor_email: jaime@hotmail.com
   request_date: 2016-06-26
   admission_date: 2016-06-26
-  request_category: MyString
-  notes: MyText
-  project_id: 
-  old_id: MyString
-  patient_id: 
-  barcode: MyString
+  request_category: validacion
+  # notes: MyText
+  project_id: 1
+  # old_id: MyString
+  patient_id: 1
+  barcode: ABC-1234
 
 two:
-  institution: MyString
-  doctor_full_name: MyString
-  doctor_email: MyString
+  id: 2
+  institution: Clínica San Cristobal
+  doctor_full_name: Dr. Lázaro
+  doctor_email: lázaro@hotmail.com
   request_date: 2016-06-26
   admission_date: 2016-06-26
-  request_category: MyString
-  notes: MyText
-  project_id: 
-  old_id: MyString
-  patient_id: 
-  barcode: MyString
+  request_category: comercial
+  # notes: MyText
+  project_id: 1
+  # old_id: MyString
+  patient_id: 2
+  barcode: ABC-1233
