fix tests for quantifications

--- a/test/fixtures/dna_extractions.yml
+++ b/test/fixtures/dna_extractions.yml
@@ -5,11 +5,13 @@ one:
   sample_id: 1
   # old_id: MyString
   date: 2016-06-26
+  tag: 1-1
   # notes: MyText
 
 two:
   id: 2
   sample_id: 1
+  tag: 1-2
   # old_id: 
   date: 2016-06-26
   # notes: MyText
@@ -17,6 +19,7 @@ two:
 three:
   id: 3
   sample_id: 2
+  tag: 2-1
   # old_id: 
   date: 2016-06-26
   # notes: MyText
