--- a/test/fixtures/studies.yml
+++ b/test/fixtures/studies.yml
@@ -2,7 +2,7 @@
 
 one:
   project_id: 1
-  patient_id:
+  patient_id: 1
   tag: MyString
   note: MyText
   institution: MyString
@@ -10,11 +10,11 @@ one:
   doctor_email: MyString
   request_date: 2017-02-13
   admission_date: 2017-02-12
-  request_category: MyString
+  request_category: cat
 
 two:
   project_id: 1
-  patient_id:
+  patient_id: 1
   tag: MyString
   note: MyText
   institution: MyString
@@ -22,18 +22,26 @@ two:
   doctor_email: MyString
   request_date: 2017-02-13
   admission_date: 2017-02-13
-  request_category: MyString
+  request_category: cat
 
 three:
+  project_id: 2
+  patient_id: 2
   request_date: 2017-02-11
   admission_date: 2017-02-11
+  request_category: cat
 
 four:
+  project_id: 2
+  patient_id: 2
   request_date: null
   admission_date: null
+  request_category: cat
 
 fifth:
   project_id: 1
+  patient_id: 2
   request_date: null
   admission_date: null
+  request_category: cat
 
